[package]
name = "eleel"
version = "0.1.0"
edition = "2021"

[dependencies]
async-channel = "1.9.0"
axum = { version = "0.7.7" }
axum-extra = { version = "0.9.4", features = ["typed-header"] }
bytes = "1.8.0"
clap = { version = "4.5.20", features = ["derive"] }
eth2 = { git = "https://github.com/sigp/lighthouse", tag = "v5.3.0" }
eth2_network_config = { git = "https://github.com/sigp/lighthouse", tag = "v5.3.0" }
ethereum_serde_utils = "0.7.0"
eventsource-client = "0.13.0"
execution_layer = { git = "https://github.com/sigp/lighthouse", tag = "v5.3.0" }
exit-future = "0.2.0"
futures = "0.3.31"
hex = "0.4.3"
hmac = "0.12.1"
jwt = "0.16.0"
keccak-hash = "0.11.0"
lru = "0.12.5"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
serde_repr = "0.1.19"
sha2 = "0.10.8"
slog = "2.7.0"
strum = { version = "0.26.3", features = ["derive", "strum_macros"] }
task_executor = { git = "https://github.com/sigp/lighthouse", tag = "v5.3.0" }
tokio = { version = "1.41.0", features = ["rt-multi-thread"] }
toml = "0.8.19"
tracing = "0.1.40"
tracing-slog = "0.3.0"
tracing-subscriber = "0.3.18"
tree_hash = "0.8.0"
tree_hash_derive = "0.8.0"
